@@ -110,6 +110,38 @@ name|apache
 operator|.
 name|tika
 operator|.
+name|parser
+operator|.
+name|html
+operator|.
+name|HtmlMapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tika
+operator|.
+name|parser
+operator|.
+name|html
+operator|.
+name|IdentityHtmlMapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tika
+operator|.
 name|sax
 operator|.
 name|BodyContentHandler
@@ -484,6 +516,11 @@ name|AUTO_PARSER
 init|=
 literal|"org.apache.tika.parser.AutoDetectParser"
 decl_stmt|;
+DECL|field|htmlMapper
+specifier|private
+name|String
+name|htmlMapper
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|firstInit
@@ -663,6 +700,52 @@ argument_list|(
 name|SEVERE
 argument_list|,
 literal|"'format' can be one of text|html|xml|none"
+argument_list|)
+throw|;
+name|htmlMapper
+operator|=
+name|context
+operator|.
+name|getResolvedEntityAttribute
+argument_list|(
+literal|"htmlMapper"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|htmlMapper
+operator|==
+literal|null
+condition|)
+name|htmlMapper
+operator|=
+literal|"default"
+expr_stmt|;
+if|if
+condition|(
+operator|!
+literal|"default"
+operator|.
+name|equals
+argument_list|(
+name|htmlMapper
+argument_list|)
+operator|&&
+operator|!
+literal|"identity"
+operator|.
+name|equals
+argument_list|(
+name|htmlMapper
+argument_list|)
+condition|)
+throw|throw
+operator|new
+name|DataImportHandlerException
+argument_list|(
+name|SEVERE
+argument_list|,
+literal|"'htmlMapper', if present, must be 'default' or 'identity'"
 argument_list|)
 throw|;
 name|parser
@@ -914,6 +997,37 @@ expr_stmt|;
 block|}
 try|try
 block|{
+name|ParseContext
+name|context
+init|=
+operator|new
+name|ParseContext
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+literal|"identity"
+operator|.
+name|equals
+argument_list|(
+name|htmlMapper
+argument_list|)
+condition|)
+block|{
+name|context
+operator|.
+name|set
+argument_list|(
+name|HtmlMapper
+operator|.
+name|class
+argument_list|,
+name|IdentityHtmlMapper
+operator|.
+name|INSTANCE
+argument_list|)
+expr_stmt|;
+block|}
 name|tikaParser
 operator|.
 name|parse
@@ -924,9 +1038,7 @@ name|contentHandler
 argument_list|,
 name|metadata
 argument_list|,
-operator|new
-name|ParseContext
-argument_list|()
+name|context
 argument_list|)
 expr_stmt|;
 block|}
