@@ -233,6 +233,44 @@ block|,
 literal|"//str[@name='text']"
 block|}
 decl_stmt|;
+DECL|field|testsHTMLDefault
+specifier|private
+name|String
+index|[]
+name|testsHTMLDefault
+init|=
+block|{
+literal|"//*[@numFound='1']"
+block|,
+literal|"//str[@name='text'][contains(.,'Basic div')]"
+block|,
+literal|"//str[@name='text'][contains(.,'<h1>')]"
+block|,
+literal|"//str[@name='text'][not(contains(.,'<div>'))]"
+comment|//default mapper lower-cases elements as it maps
+block|,
+literal|"//str[@name='text'][not(contains(.,'<DIV>'))]"
+block|}
+decl_stmt|;
+DECL|field|testsHTMLIdentity
+specifier|private
+name|String
+index|[]
+name|testsHTMLIdentity
+init|=
+block|{
+literal|"//*[@numFound='1']"
+block|,
+literal|"//str[@name='text'][contains(.,'Basic div')]"
+block|,
+literal|"//str[@name='text'][contains(.,'<h1>')]"
+block|,
+literal|"//str[@name='text'][contains(.,'<div>')]"
+block|,
+literal|"//str[@name='text'][contains(.,'class=\"classAttribute\"')]"
+comment|//attributes are lower-cased
+block|}
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -285,6 +323,152 @@ argument_list|,
 name|tests
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testTikaHTMLMapperEmpty
+specifier|public
+name|void
+name|testTikaHTMLMapperEmpty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|runFullImport
+argument_list|(
+name|getConfigHTML
+argument_list|(
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+name|testsHTMLDefault
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testTikaHTMLMapperDefault
+specifier|public
+name|void
+name|testTikaHTMLMapperDefault
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|runFullImport
+argument_list|(
+name|getConfigHTML
+argument_list|(
+literal|"default"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+name|testsHTMLDefault
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testTikaHTMLMapperIdentity
+specifier|public
+name|void
+name|testTikaHTMLMapperIdentity
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|runFullImport
+argument_list|(
+name|getConfigHTML
+argument_list|(
+literal|"identity"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|,
+name|testsHTMLIdentity
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|getConfigHTML
+specifier|private
+name|String
+name|getConfigHTML
+parameter_list|(
+name|String
+name|htmlMapper
+parameter_list|)
+block|{
+return|return
+literal|"<dataConfig>"
+operator|+
+literal|"<dataSource type='BinFileDataSource'/>"
+operator|+
+literal|"<document>"
+operator|+
+literal|"<entity name='Tika' format='xml' processor='TikaEntityProcessor' "
+operator|+
+literal|"       url='"
+operator|+
+name|getFile
+argument_list|(
+literal|"dihextras/structured.html"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+literal|"' "
+operator|+
+operator|(
+operator|(
+name|htmlMapper
+operator|==
+literal|null
+operator|)
+condition|?
+literal|""
+else|:
+operator|(
+literal|" htmlMapper='"
+operator|+
+name|htmlMapper
+operator|+
+literal|"'"
+operator|)
+operator|)
+operator|+
+literal|">"
+operator|+
+literal|"<field column='text'/>"
+operator|+
+literal|"</entity>"
+operator|+
+literal|"</document>"
+operator|+
+literal|"</dataConfig>"
+return|;
 block|}
 block|}
 end_class
